# hariboteos_in_rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  kernel.ld  test.txt
apps/: README.md  asmfunc.asm
apps/bball/: Cargo.toml
apps/bball/src/: lib.rs
apps/beepdown/: Cargo.toml
apps/beepdown/src/: lib.rs
apps/calc/: Cargo.toml
apps/calc/src/: lib.rs
apps/cat/: Cargo.toml
apps/cat/src/: lib.rs
apps/catipl/: Cargo.toml
apps/catipl/src/: lib.rs
apps/chklang/: Cargo.toml
apps/chklang/src/: lib.rs
apps/color/: Cargo.toml
apps/color/src/: lib.rs
apps/gview/: Cargo.toml  jpeg.c  kernel.ld
apps/gview/src/: lib.rs
apps/invader/: Cargo.toml
apps/invader/src/: lib.rs
apps/iroha/: Cargo.toml  i686-haribote.json
apps/iroha/.cargo/: config
apps/iroha/src/: lib.rs
apps/lines/: Cargo.toml
apps/lines/src/: lib.rs
apps/notrec/: Cargo.toml
apps/notrec/src/: lib.rs
apps/prim/: Cargo.toml
apps/prim/src/: lib.rs
apps/timer/: Cargo.toml
apps/timer/src/: lib.rs
apps/tview/: Cargo.toml
apps/tview/src/: lib.rs
asm/: asmfunc.asm  asmhead.asm  crack2.asm  crack7.asm  hello.asm  hello2.asm  hlt.asm  ipl.asm
hello/: Cargo.toml
hello/src/: asmfunc.asm  lib.rs
src/: asm.rs  console.rs  descriptor_table.rs  fifo.rs  file.rs  fonts.rs  interrupt.rs  keyboard.rs  lib.rs  memory.rs  mouse.rs  mt.rs  sheet.rs  timer.rs  tss.rs  vga.rs  window.rs
texts/: ascii.txt  euc.txt  sjis.txt
