[package]
name = "hariboteos_in_rust"
version = "0.1.0"
authors = ["yoshitsugu <yoshitsugu@users.noreply.github.com>"]
edition = "2018"

[dependencies]
spin = "0.5.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
name = "haribote_os"
crate-type = ["staticlib"]